<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.malkusch.km200</groupId>
	<artifactId>km200</artifactId>
	<version>3.0.1-SNAPSHOT</version>
	<name>KM200</name>
	<description>KM200 API</description>
	<parent>
		<groupId>de.malkusch.parent</groupId>
		<artifactId>oss-parent</artifactId>
		<version>3.0.5</version>
	</parent>
	<url>https://github.com/malkusch/${project.artifactId}</url>
	<scm>
		<connection>scm:git:git://github.com/malkusch/${project.artifactId}.git</connection>
		<developerConnection>scm:git:git@github.com:malkusch/${project.artifactId}.git</developerConnection>
	</scm>
	<properties>
		<github.repository>malkusch/km200</github.repository>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<dependencies>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.16.0</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.14.1</version>
		</dependency>
		<dependency>
			<groupId>dev.failsafe</groupId>
			<artifactId>failsafe</artifactId>
			<version>3.3.2</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.9.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.github.tomakehurst</groupId>
			<artifactId>wiremock-jre8</artifactId>
			<version>2.35.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.15.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.2</version>
			</plugin>
		</plugins>
	</build>
</project>
